--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
 
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <link rel="icon" href="<%= BASE_URL %>img/avatar.png">
     <link href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
     
@@ -14,7 +14,7 @@
     <meta property="og:title" content="<%= VUE_APP_TITLE %>" />
     <meta property="og:description" content="<%= VUE_APP_OGDESCRIPTION %>" />
     <meta property="og:url" content="<%= VUE_APP_PRODUCTION_URL %>" />
-    <meta property="og:image" content="<%= VUE_APP_PRODUCTION_URL %>/img/avatar-og.png" />
+    <meta property="og:image" content="<%= VUE_APP_PRODUCTION_URL %>/img/avatar-og.jpg" />
 
   </head>
   <body>
